Activate -XstartOnFirstThread on macOS for SWT canvas tests